# instagram-dashboard-server

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 1b8f74487487_init_instagram_schema.py  4703ec28ec03_add_access_token_to_accounts.py  c9cd17bad288_add_organizations_and_account_org_id.py  d94f567973a1_add_users_and_organizations_owner_user_.py  e1a2b3c4d5e6_add_organization_memberships.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: accounts.py  analytics.py  assets.py  auth.py  drafts.py  generate.py  ideas.py  organizations.py
app/core/: auth.py  config.py
app/db/: base.py  session.py  while_you_are_at_it.db
app/models/: __init__.py  account.py  content_idea.py  creative_asset.py  organization.py  organization_membership.py  post_draft.py  post_metrics.py  publish_job.py  user.py
app/prompts/: brand_profiles.py
app/schemas/: account.py  content_idea.py  post_draft.py
app/services/: email_service.py  generate_service.py  insights_service.py  instagram_service.py  scheduler.py  storage_service.py
